workloads/imageserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: john2143-com
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: john2143-com
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        app: john2143-com
        servicegroup: "mine"
    spec:
      volumes:
      - name: data-volume
        emptyDir:
          sizeLimit: 20Gi
      - name: upload-fish
        configMap:
          name: upload-fish
          defaultMode: 0555
          items:
            - key: upload.fish
              path: upload.fish
            - key: prune.fish
              path: prune.fish
            - key: shared.fish
              path: shared.fish

      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: workload-type
                    operator: In
                    values:
                      - general
      containers:
      - name: john2143-com
        image: ghcr.io/john2143/john2143.com:209
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: &port 3000
        volumeMounts:
        - mountPath: /app/juushFiles
          name: data-volume
        - mountPath: /app/upload-fish
          name: upload-fish
          readOnly: true
        resources:
          requests:
            memory: "256Mi"
            cpu: "10m"
          limits:
            memory: "512Mi"
            cpu: "200m"

        livenessProbe:
          httpGet:
            path: /health
            port: *port
          initialDelaySeconds: 1
          periodSeconds: 10
          failureThreshold: 25
          timeoutSeconds: 5

        readinessProbe:
          httpGet:
            path: /health
            port: *port
          initialDelaySeconds: 1
          periodSeconds: 5
          failureThreshold: 3
          timeoutSeconds: 5
