workloads/imageserver/mongo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
        servicegroup: "mine"
    spec:
      volumes:
      - name: mongodata
        emptyDir:
          sizeLimit: 500Mi

      containers:
      - name: mongo
        image: mongo:7
        ports:
        - containerPort: 27017

        volumeMounts:
          - mountPath: /data/db
            name: mongodata

        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
    name: http
  selector:
    app: mongo
