workloads/imageserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: john2143-com
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: john2143-com
